@@ -11,8 +11,6 @@ use strict;
 use warnings;
 use diagnostics;
 
-modern_data_compare();
-
 print "1..5123\n";
 
 resetall; # --------------------------------------------------
