@@ -12,8 +12,6 @@ use strict;
 use warnings;
 use diagnostics;
 
-modern_data_compare();
-
 print "1..489\n";
 
 resetall; # --------------------------------------------------
