@@ -3,4 +3,5 @@
 use Test::More;
 eval "use Test::Pod 1.00";
 plan skip_all => "Test::Pod 1.00 required for testing POD" if $@;
-all_pod_files_ok();
+use FindBin;
+all_pod_files_ok("$FindBin::Bin/../lib");
