@@ -8,8 +8,6 @@ use strict;
 use warnings;
 use diagnostics;
 
-modern_data_compare();
-
 print "1..128860\n";
 
 sub selector {
